# internal/api-statistics/domain/entities/statistics.go
@@ -5,10 +5,10 @@ package entities
 
 // Statistics represents the statistics entity
 type Statistics struct {
-	ID              string `json:"id"`
-	MultipleOne     int64  `json:"multiple_one"`
-	MultipleTwo     int64  `json:"multiple_two"`
-	ReplacementStr1 string `json:"replacement_str1"`
-	ReplacementStr2 string `json:"replacement_str2"`
-	Limit           int64  `json:"limit"`
+	ID                   string `json:"id"`
+	FirstNumber          int64  `json:"first_number"`
+	SecondNumber         int64  `json:"second_number"`
+	FirstReplacementStr  string `json:"first_replacement_str"`
+	SecondReplacementStr string `json:"second_replacement_str"`
+	Limit                int64  `json:"limit"`
 }
