# internal/api-statistics/dto/responses/responses.go
@@ -4,11 +4,11 @@ import "fizzbuzz-api/internal/api-statistics/datamodel"
 
 // FizzBuzzRequest represents the request payload for a FizzBuzz operation
 type FizzBuzzRequest struct {
-	Limit              int64  `json:"limit"`
-	Multiple1          int64  `json:"multiple1"`
-	Multiple2          int64  `json:"multiple2"`
-	ReplacementString1 string `json:"replacement_string1"`
-	ReplacementString2 string `json:"replacement_string2"`
+	Limit                int64  `json:"limit"`
+	FirstNumber          int64  `json:"first_number"`
+	SecondNumber         int64  `json:"second_number"`
+	FirstReplacementStr  string `json:"first_replacement_str"`
+	SecondReplacementStr string `json:"second_replacement_str"`
 }
 
 // MostFrequentRequestResponse represents the response payload for the most frequent FizzBuzz request
@@ -21,11 +21,11 @@ type MostFrequentRequestResponse struct {
 func SerializeMostFrequentRequestResponse(data *datamodel.Statistic, count int) *MostFrequentRequestResponse {
 	return &MostFrequentRequestResponse{
 		Request: FizzBuzzRequest{
-			Limit:              data.Limit,
-			Multiple1:          data.MultipleOne,
-			Multiple2:          data.MultipleTwo,
-			ReplacementString1: data.ReplacementStr1,
-			ReplacementString2: data.ReplacementStr2,
+			Limit:                data.Limit,
+			FirstNumber:          data.FirstNumber,
+			SecondNumber:         data.SecondNumber,
+			FirstReplacementStr:  data.FirstReplacementStr,
+			SecondReplacementStr: data.SecondReplacementStr,
 		},
 		Count: count,
 	}
